namespace EasySave.Core.Enums
{
    /// <summary>
    /// Enum representing the type of backup.
    /// </summary>
    public enum BackupType
    {
        /// <summary>
        /// Represents a full backup.
        /// </summary>
        Full,
        /// <summary>
        /// Represents an Differential backup.
        /// </summary>
        Differential
    }
}